--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,16 +1,18 @@
-body{
+body {
     padding-top: 65px;
     background-color: #eaebff;
-    /* background-color: #f5f5ff; */
     font-weight: bold;
 }
 
-.container{
+.container {
     padding: 10px 30px;
 }
-.navbar{
+
+.navbar {
     background-color: #eaebff;
     padding-top: 10px;
+    margin-left: auto; /* Ensures header is aligned to the left */
+    margin-right: auto; /* Ensures header is aligned to the right */
 }
 
 .bg-custom {
@@ -18,17 +20,24 @@ body{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-ul li a.nav-link{
+ul li a.nav-link {
     color: red;
 }
+
 .navbar-brand {
     color: #242426 !important;
-  }
-  
-  .nav-link {
+}
+
+.nav-link {
     color: black !important;
-  }
-  
-  .nav-link:hover {
-    color: blue!important;
-  }
+}
+
+.nav-link:hover {
+    color: blue !important;
+}
+
+@media (max-width: 399px) {
+    .custom-nav {
+        margin: 10px 20px; /* Adjust margin as needed for smaller screens */
+    }
+}
