--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -39,6 +39,31 @@ ul li a.nav-link{
     color: blue!important;
   }
 
+  .navbar-collapse {
+    transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+  }
+  
+  .navbar-collapse.show {
+    max-height: 500px; /* Adjust this value as needed */
+    opacity: 1;
+  }
+  
+  .navbar-collapse.closing {
+    max-height: 0;
+    opacity: 0;
+  }
+  
+  @media (min-width: 992px) {
+    .navbar-collapse {
+      max-height: none;
+      opacity: 1;
+      overflow: visible;
+    }
+  }
+
 
   @media (max-width: 399px) {
     body{
