--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .header{
   background-color: #1F2937;
