--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -3,7 +3,7 @@ body{
     padding-top: 92px;
     background-color: #eaebff;
     /* background-color: #f5f5ff; */
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 /* .container {
